# django-sample

./: .env.example  README.md  manage.py  pyproject.toml
Centrilearn/: asgi.py  settings.py  urls.py  wsgi.py
base/: admin.py  code.py  forms.py  models.py  urls.py  views.py
base/chatModel/: agent.py
base/chatModel/tools/crew/: agent.py  crew.py  task.py
base/chatModel/tools/crew/tools/: bing_scrapper.py  google_scrapper.py  rag_tool.py  search_tool.py
base/chatModel/tools/crew/tools/data_dir/: TECHWAVE EDITED DATA FOR CENTRILEARN.xlsx - Sheet1.csv
base/migrations/: 0001_initial.py  0002_user_avatar_user_bio_user_name_alter_user_email.py
base/templates/base/: change_password.html  code_generation.html  home.html  login_register.html  profile.html  settings.html  update_user.html
templates/: main.html  nav.html
